k8s/expenses-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expenses-api-ingress
spec:
  rules:
  - host: expenses.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: expenses-api-service
            port:
              number: 80
